--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,7 +2,7 @@
     height: 100vh;
     /* width: 50vw; */
     background:no-repeat center/95% url("/assets/ictpicture.jpg");
-    background-size: cover;
+    background-size: contain;
     padding: 25px;
     box-sizing: border-box;
 }
@@ -18,7 +18,7 @@
 }
 
 .new {
-    background: yellow;
+    background: #ffff;
     /* transition: all 1s linear; */
     /* margin-right: 0vw; */
     transform: skew(0deg);
@@ -38,7 +38,7 @@
     box-shadow: black 8px 8px 18px;
     position: relative;
     top: 50px;
-    transform: rotate(-5deg);
+    transform: rotate(-o.5deg);
     transition: all .5s ease-out;
 }
 .case:hover{
