--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,5 @@
 .f {
-    height: 100vh;
+    height: ;
     /* width: 50vw; */
     background:no-repeat center/95% url("/assets/ictpicture.jpg");
     background-size: contain;
