--- a/styles/styles.css
+++ b/styles/styles.css
@@ -149,6 +149,9 @@ body{
 }
 @media only screen and (max-width: 280px) {
    .intro{
-       top: 20px;
+       top: 10px;
+   }
+   .case{
+       width: 100%;
    }
 }
