--- a/styles/styles.css
+++ b/styles/styles.css
@@ -153,6 +153,7 @@ body{
 @media only screen and (max-width: 280px) {
    .intro{
        top: 0px;
+       padding: 8px;
    }
    .case{
        width: 100%;
