--- a/styles/styles.css
+++ b/styles/styles.css
@@ -136,13 +136,11 @@ body{
 @keyframes wave{
 0% {
     transform: rotate(0.08turn);
-    /* background-color: yellow; */
 }
 
 25% {
     transform: rotate(0.03turn);
 }
-
 
 50% {
     transform: rotate(0.06turn);
@@ -157,7 +155,7 @@ body{
     animation-name: wave;
     animation-duration: 2s;
     animation-iteration-count: infinite;
-    animation-direction: alternate-reverse;
+    /* animation-direction: alternate-reverse; */
 }
 
 @media only screen and (max-width: 414px) {
